--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.3",
     "@types/react-router-dom": "^5.3.3",
     "lodash.debounce": "^4.0.8",
+    "lodash.set": "^4.3.2",
     "lodash.throttle": "^4.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -55,6 +56,7 @@
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-resolvers": "2.6.1",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.set": "^4.3.7",
     "@types/lodash.throttle": "^4.1.7",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
